test/examples/invalid/test-one_pass.js

exports['pass'] = function (test){
  test.ok(true);
  test.finish();
}
